fixed 'let go' image title positioning on firefox

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1001,11 +1001,11 @@ header {
         -ms-flex-pack: center;
             justify-content: center; }
     #photo-page-wrapper #photo-wrapper > a {
-      padding: 0 10px; }
+      padding: 0; }
       #photo-page-wrapper #photo-wrapper > a .title {
         display: block;
         width: 100%;
-        text-align: right; }
+        text-align: right !important; }
     #photo-page-wrapper #photo-wrapper > a img {
       width: 100%;
       height: auto;
