--- a/app/scss/sass-modules/_photo-page.sass
+++ b/app/scss/sass-modules/_photo-page.sass
@@ -20,11 +20,11 @@
     display: flex
     justify-content: center
     > a
-      padding: 0 10px
+      padding: 0
       .title
         display: block
         width: 100%
-        text-align: right
+        text-align: right !important
     > a img
       width: 100%
       height: auto
